Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69704

tst_controls::Default::Tumbler fails across platforms

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 5.12.0 Alpha
    • 5.12
    • Quick: Controls 2
    • None
    • Linux/X11, macOS, Windows
    • 6952f40a3ef47e5bc62286f75b26b2d79eaa9d74

      As part of the update of qt5 at https://codereview.qt-project.org/#/c/235389/ , the sha1s in patch set 5 result in failures in the tumbler auto-test.

      Example log:

      https://testresults.qt.io/coin/api/results/qt/qtquickcontrols2/b9aac9a025e226007e4314540237990a1a8d3730/MacOSOSX_10_11x86_64MacOSOSX_10_11x86_64Clangqtci-osx-10.11-x86_64-3-9498f6DeveloperBuild_Release_QtNamespace_NoPch/462a43eceddff97b0834e05b6a8956223a68850e/test_1533086917/log.txt.gz

       

      For example:

       

       FAIL!  : tst_controls::Default::Tumbler::test_displacementListView(contentY=-16.66666666666667) Delegate of ListView-based Tumbler at index 0 has displacement of -0.0050000000000001415 when it should be 0.75
          Actual   (): -0.0050000000000001415
          Expected (): 0.75
          Loc: [/Users/qt/work/qt/qtquickcontrols2/tests/auto/controls/data/tst_tumbler.qml(831)]

       

      For once I don't suspect any JS/QML changes to be the cause , but there were flickable changes in declarative.

        For Gerrit Dashboard: QTBUG-69704
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            shausman Simon Hausmann
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes