QuickTestEvent: keep pressed mouse buttons constant during move events

After qtbase b3e91b66b9175c1c3ff5f73f3ac231f74f9bf932 and predecessors,
as stated, "Qt platform plugins are now responsible for sending
explicit mouse button type and state information; qtestlib should take
full responsibility now as well."  In QML tests we have not yet had
this memory of which buttons are pressed, until now.  Change
caa45b4fe8b63f4be87b63b33595f65a0f44230e made Flickable sensitive to
buttons: it refuses to flick in response to mouse events in which no
button is being held.  This broke tests in qtquickcontrols2 which
assume that in a QML test sequence like

mousePress(tumbler, tumbler.width / 2, tumbler.height / 2, Qt.LeftButton)
mouseMove(tumbler, tumbler.width / 2, y, 1)
mouseRelease(tumbler, tumbler.width / 2, tumbler.height / 4, Qt.LeftButton)

the mouse moves will include the pressed left button because it was
pressed and not released.  So we have to fulfill the assumption to
avoid needing to change those tests.  When the function

bool mouseMove(QObject *item, qreal x, qreal y, int delay, int buttons);

is called from QML, if that last parameter is omitted, it defaults to
zero, so we can't tell whether the test is explicitly passing
Qt.NoButton or just omitted it.

Task-number: QTBUG-69704
Change-Id: Ife0f7d0e9cb0d39788e8d9961d8872c9e913431e
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
Reviewed-by: Gatis Paeglis <gatis.paeglis@qt.io>